# ARCS

./: Makefile.am  README  README.md  TODO  autogen.sh  configure.ac
benchmark/: 3rd_E.coli.cfg  Bib.t.cfg  CuCR3.cfg  E.coli.cfg  Fran.cfg  Man.cfg  Rho.cfg  Sal.e.cfg  Sta.cfg  Yer.cfg  arcs_test.sh  bgi.cfg  cassava.cfg  cfg.for.hr14  cfg.paper  cfg.paper.withReport  cfg.paper.withoutReport  cfg.txt  cup.cfg  d12.cfg  d9.cfg  hr14.cfg  nanhai.cfg  statistic.sh
m4/: Makefile.am
src/: ARCS.py  ARCS_mem.py  Gap_Filling.cpp  Gap_Filling.h  Makefile.am  arff.cpp  arff.h  check_repeat.py  component.cpp  component.h  condensed_debruijn_graph.cpp  condensed_debruijn_graph.h  condensed_debruijn_graph_reader.cpp  condensed_debruijn_graph_reader.h  constant.cpp  constant.h  contiging.cpp  contiging.h  contigs.cpp  contigs.h  copy_num_estimator.cpp  copy_num_estimator.h  copy_number_estimate.py  debruijn_edge.cpp  debruijn_edge.h  debruijn_graph.h  example.cfg  gap_filler.cpp  gap_filler.h  gap_filling.cpp  gap_filling.h  gapped_fragment_graph.cpp  gapped_fragment_graph.h  get_repeate_com.py  gmm.cpp  gmm.h  kmer.h  kmer_dataset.h  kmer_tbl.h  kseq.cpp  (+25 more)
src/contiging/: Makefile.am  copy_number_estimate.py  copy_number_transform.py  debruijn_graph.cpp  debruijn_graph.h  kmer.cpp  kmer.h  kmer_tbl.cpp  kmer_tbl.h  kseq.cpp  kseq.h  main.cpp  utils.h
src/contiging/32-mer/: DeBruijnGraph.cpp  DeBruijnGraph.h  Hash_Md5.h  Kmer.cpp  Kmer.h  Kmer_Hash.cpp  Kmer_Hash.h  Kmer_Hash_Md5.cpp  Kmer_Hash_Md5.h  Kmer_Short.cpp  Kmer_Short.h  Kmer_Short_Hash.cpp  Kmer_Short_Hash_Md5.cpp  Kmer_Short_Hash_Md5.h  Lib.h  Makefile.am  main.cpp  test.cpp
src/contiging/32-mer/scripts/: accuracy.py
src/contiging/64-mer/: DeBruijnGraph.cpp  DeBruijnGraph.h  Kmer.cpp  Kmer.h  Kmer_Hash.cpp  Kmer_Hash.h  Kmer_Hash_Md5.cpp  Kmer_Hash_Md5.h  Kmer_Short.cpp  Kmer_Short.h  Kmer_Short_Hash.cpp  Kmer_Short_Hash_Md5.cpp  Kmer_Short_Hash_Md5.h  Lib.cpp  Makefile.am  copy_num.py  main.cpp
src/contiging/64-mer/scripts/: copy_num.py  deployment.sh  networksx.py
src/contiging/96-mer/: DeBruijnGraph.cpp  DeBruijnGraph.h  Hash_Md5.h  Kmer.cpp  Kmer.h  Kmer_Hash.cpp  Kmer_Hash.h  Kmer_Hash_Md5.cpp  Kmer_Hash_Md5.h  Kmer_Short.cpp  Kmer_Short.h  Kmer_Short_Hash.cpp  Kmer_Short_Hash.h  Kmer_Short_Hash_Md5.cpp  Kmer_Short_Hash_Md5.h  Lib.h  Makefile.am  main.cpp  node.h
src/contiging/96-mer/scripts/: min_cost_flow.DIMACS  sim_real.py  tran.py  vrt.py
src/divideLP/: Makefile.am  depart.cpp  main.cpp  runLP.sh
src/gap_filling/: Constant.h  Edge.cpp  Edge.h  Gap_Filling.2.cpp  Gap_Filling.cpp  Gap_Filling.h  Makefile.am  Scaffold.cpp  Scaffold.h  Split_String.cpp  Split_String.h  main.cpp  reverseFilter.py  reverse_filter.py
src/remove_repeats/: Makefile.am  Uniq_Edge_Graph.cpp  Uniq_Edge_Graph.h  component.cpp  component.h  main.cpp  uniq_edge_graph.cpp  uniq_edge_graph.h
src/scaffolding/: Edge.h  Kmer.cpp  Kmer.h  Kmer_Hash.cpp  Kmer_Hash.h  Lib.h  Linearization.cpp  Linearization.h  Lp_example.mod  Makefile.am  Pos_Recorder.cpp  Pos_Recorder.h  Uniq_Edge_Graph.cpp  Uniq_Edge_Graph.h  component.cpp  component.h  contigs.cpp  contigs.h  graph.cpp  graph.h  kmer.cpp  kmer.h  kmer_hash.cpp  kmer_hash.h  kmer_tbl.cpp  kmer_tbl.h  kseq.h  linearization.cpp  linearization.h  main.cpp  pair_read.cpp  pair_read.h  parse_glpk_results.py  pos_recorder.cpp  pos_recorder.h  tran_pos.py  tran_pos_smallLPs.py  uniq_edge_graph.cpp  uniq_edge_graph.h
src/scoring/: ARCS_PerM.sh  Constant.h  Count_Struct.cpp  Count_Struct.h  Func.h  Makefile.am  Para.cpp  Para.h  Read_Sam_For_Test.cpp  Read_Sam_For_Test.h  Read_Sam_For_Training.cpp  Read_Sam_For_Training.h  Split_String.cpp  Split_String.h  String.h  main.cpp
src/script/: ARCS.py  ARCS_sca.py  RRdis.py  RRsca.py  Rcomponent.py  Scomponent.py  _dbfind.py  copy_number.py  coverage.py  dbfind.py  deBruijn.py  dealCyto.py  em3.py  generateCom.py  links_dis.py  merging.py  pairedkmer.py  plot.py  plot.sh  plot3.sh  run.sh
