bin_PROGRAMS=scaffolding 
scaffolding_SOURCES=main.cpp \
            contigs.cpp	\
            contigs.h	\
            component.cpp	\
            conponent.h	\
            kmer.h	\
            kmer.cpp	\
            kmer_tbl.h	\
            kmer_tbl.cpp	\
	        pair_read.h	\
            pair_read.cpp	\
            graph.h	\
            graph.cpp	\
			kseq.h	\
            kseq.cpp	\
scaffolding_CXXFLAGS=${LOG4CXX_CFLAGS}
scaffolding_LDFLAGS=${LOG4CXX_LIBS} \
					-lboost_regex
