AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=scoring
scoring_SOURCES = main.cpp \
				Count_Struct.h Count_Struct.cpp \
				Func.h \
				Constant.h \
				Para.h Para.cpp \
				Read_Sam_For_Training.h Read_Sam_For_Training.cpp \
				Read_Sam_For_Test.h Read_Sam_For_Test.cpp \
				Split_String.h Split_String.cpp
