bin_PROGRAMS=contiging
contiging_SOURCES=Kmer_Hash_Md5.h \
					   Kmer_Hash_Md5.cpp\
					   Kmer_Short_Hash_Md5.h\
					   Kmer_Short_Hash_Md5.cpp\
					   Kmer_Hash.h\
					   Kmer.h\
					   Kmer.cpp\
					   Kmer_Short.h\
					   Kmer_Short.cpp\
					   Lib.cpp	Lib.h	\
					   DeBruijnGraph.h	\
					   DeBruijnGraph.cpp	\
					   node.h  \
					   main.cpp
