bin_PROGRAMS=contiging
AM_CPPFLAGS = -O3
contiging_SOURCES=Kmer_Hash_Md5.h \
					   Kmer_Hash_Md5.cpp \
					   Kmer_Short_Hash_Md5.h \
					   Kmer_Short_Hash_Md5.cpp \
					   Kmer_Hash.h \
					   Kmer.h \
					   Kmer.cpp \
					   Kmer_Short.h \
					   Kmer_Short.cpp \
					   Lib.cpp	Lib.h	\
					   DeBruijnGraph.h	\
					   node.h \
					   DeBruijnGraph.cpp	\
					   main.cpp
LIBS+=-lpthread 